--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -59,12 +59,13 @@
   color: #e4e4e4;
   width: 50%;
   padding-left: 4%;
-  height: 150px;
+  height: 175px;
   font-style: italic;
   font-size: 23px;
-  margin-top: 8%;
+  margin-top: 7.5%;
   margin-left: 4%;
   border-left: 5px solid #e4e4e4;
+  border-radius: 1%;
 }
 #career{
   font-weight: bolder;
