--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -3,7 +3,7 @@ canvas{
   width: 100%;
 }
 .title#header{
-  font-size: 64px;
+  font-size: 76px;
   text-shadow: 0px 1px 2px seagreen;
   margin-left: -15%;
   font-weight: 900;
@@ -16,7 +16,9 @@ canvas{
 }
 #title-letter:hover{
   color: seagreen;
+  text-shadow: 0px 1px 2px black ;
 }
+
 #title-dot{
   transition: .15s ease-in-out;
   text-shadow: 0px 0px 0px black;
