--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -20,7 +20,7 @@
   color: seagreen;
   font-weight: 600;
   border: none;
-  padding-left: 1
+  padding-left: 1;
   font-size: 14px;
   width: 10%;
   cursor: pointer;
