--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -30,7 +30,7 @@
   height: 285px;
   width: 285px;
   border: 6px solid #e4e4e4;
-  border-radius: 100%;
+  border-radius: 25%;
   margin-left: 17%;
   margin-top: 3%;
   transition: .35s ease-in-out;
@@ -38,7 +38,7 @@
   box-shadow: 0 11px 20px rgba(0,0,0,0.33), 0 10px 10px rgba(0,0,0,0.33);
 }
 .bio-img{
-  border-radius: 100%;
+  border-radius: 25%;
   height: 100%;
   width: 100%;
   opacity: .85;
@@ -73,5 +73,5 @@
   transition: .35s ease-in-out;
 }
 #career:hover{
-
+  transition: scale(1.1);
 }
