--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -17,7 +17,12 @@
   width: 22%;
   margin-left: 2%;
   border: 1px solid #ffffff;
-  height: 235px;
+  height: 275px;
   background: #005b97;
   box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
+}
+
+#art-img{
+  width: 100%;
+  height: 275px;
 }
