quicklinks color change to better match web overall theme -- small edit

--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -25,4 +25,9 @@
 #art-img{
   width: 100%;
   height: 275px;
+  transition: .4s ease-in-out;
+  cursor: pointer;
+}
+#art-img:hover{
+  transform: scale(1.25);
 }
