--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -1,6 +1,6 @@
 .carousel-section{
   background: whitesmoke;
-  height: 700px;
+  height: 650px;
   clip-path: polygon(30% 0, 100% 10%, 100% 100%, 30% 100%, 0 100%, 0 10%);
   width: 100%;
   margin-top: 0%;
@@ -16,6 +16,8 @@
 }
 .carousel-container{
   background: whitesmoke !important;
+  opacity: 1 !important;
+  margin-top: -3%;
 }
 .carousel-indicators{
   position: absolute !important;
@@ -65,6 +67,12 @@
 #sports-logo{
   height: 135px;
   width: 135px;
+  transition: .3s ease-in-out;
+  cursor: pointer;
+}
+#sports-logo:hover{
+  transform: scale(1.3);
+
 }
 #dallas-img{
   height: 235px;
