using a better picture for bio pic an added links to demos for main projects on highlight reel

--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -77,6 +77,12 @@
 #dallas-img{
   height: 235px;
   width: 200px;
+  border-radius: 15%;
+}
+#project-img{
+  height: 235px;
+  width: 200px;
+  border-radius: 15%;
 }
 .team-sect-title{
   position: absolute;
