--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -11,6 +11,14 @@ a{
 a:hover, a:active{
   color: white;
 }
+#close-btn{
+  border: none;
+  color: seagreen;
+  font-weight: 800;
+  font-size: 28px;
+  right: 2%;
+  position: absolute;
+}
 .nav-logo{
   width: 10%;
 }
@@ -67,4 +75,16 @@ a:hover, a:active{
 }
 .bet{
   display: none;
+  position: fixed;
+  margin: 20% 0 0 50%;
+  z-index: 5;
+  height: 225px;
+  width: 350px;
+  background: white;
+  opacity: .85;
+}
+#bet-text{
+  text-align: center;
+  position: absolute;
+  margin: 15%;
 }
