--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -78,13 +78,25 @@ a:hover, a:active{
   position: fixed;
   margin: 20% 0 0 50%;
   z-index: 5;
-  height: 225px;
+  height: 250px;
   width: 350px;
   background: white;
   opacity: .85;
+  box-shadow: 2px 15px 25px black
 }
 #bet-text{
   text-align: center;
   position: absolute;
   margin: 15%;
+}
+#bet-text-divider{
+  color: seagreen;
+  border-color: seagreen;
+  background: seagreen;
+}
+#bet-header-text{
+  font-size: 20px;
+}
+#the-bet{
+  font-weight: 600;
 }
