--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -71,7 +71,10 @@
   font-weight: bolder;
   display: inline-block;
   transition: .35s ease-in-out;
+  padding: .4%;
+  cursor: alias;
 }
 #career:hover{
   transition: scale(1.1);
+  background: black;
 }
