--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -18,6 +18,7 @@
   background: whitesmoke !important;
   opacity: 1 !important;
   margin-top: -3%;
+
 }
 .carousel-indicators{
   position: absolute !important;
@@ -30,6 +31,7 @@
   text-align: center;
   margin: 8% auto;
   position: absolute;
+
 }
 .carousel-indicators li{
   background: seagreen;
@@ -71,13 +73,36 @@
   cursor: pointer;
 }
 #sports-logo:hover{
-  transform: scale(1.3);
-
+  transform: scale(1.175);
+}
+img#sports-logo:hover ~ span#team-name{
+  color: gold
+}
+#team-name{
+  font-family: 'Satisfy', sans-serif;
+  position: relative;
+  top: 6%;
+  color: black;
+  font-weight: 300;
+  transition: .35s ease-in-out;
+}
+.team-info{
+  display: none;
+  position: absolute;
+  z-index: 101;
+  height: 200px;
+  opacity: .85;
+  width: 420px;
+  background: black;
+  color: seagreen;
+  padding: 3%;
+  margin: 17% 0 0 25%;
+  transition: .35s ease-in-out;
 }
 #dallas-img{
   height: 235px;
   width: 200px;
-  border-radius: 15%;
+  border-radius: 10%;
 }
 #project-img{
   height: 235px;
@@ -86,4 +111,12 @@
 }
 .team-sect-title{
   position: absolute;
+}
+#dallas-img{
+  opacity: .65;
+  transition: .35s ease-in-out;
+  cursor: crosshair;
+}
+#dallas-img:hover{
+  opacity: 1;
 }
