--- a/src/components/CentralHome/index.css
+++ b/src/components/CentralHome/index.css
@@ -2,3 +2,8 @@ body{
   background-color: rgb(0,0,0);
   font-family: 'Quicksand', sans-serif;
 }
+@media only screen and (max-width: 600px) {
+   #particles{
+    display: none;
+  }
+}
