new quote of the day

--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -22,7 +22,7 @@
   opacity: .05%;
   width: 22%;
   margin-left: 2%;
-  border: 1px solid #ffffff;
+  border: 5px solid whitesmoke;
   background: #D4af37;
   box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
