--- a/src/components/WebDevSlab/index.css
+++ b/src/components/WebDevSlab/index.css
@@ -26,7 +26,7 @@
   margin-top: 4%;
   margin-left: 2%;
   padding: 1%;
-  border: 1px solid whitesmoke;
+  border: 1px solid #aaa;
   height: 250px;
   transition: .45s ease-in-out;
   opacity: .85;
@@ -45,7 +45,7 @@
 .dev-fields:hover{
   transform: scale(1.05);
   opacity: 1;
-  border-color: gold;
+  border-color: white;
 }
 
 .dev-design-line{
