--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -5,7 +5,13 @@
   background-image: url('https://images.pexels.com/photos/1282315/pexels-photo-1282315.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
 }
 .title#art{
-
+  color: seagreen;
+  text-align: left;
+  padding-top: 1%;
+  margin-left: 40%;
+  font-weight: bolder;
+  font-family: 'Satisfy', sans-serif;
+  font-size: 60px;
 }
 
 .gallery-container{
@@ -35,7 +41,7 @@
 
 #art-img{
   width: 100%;
-  height: 275px;
+  height: 235px;
   transition: .55s ease-in-out;
   cursor: pointer;
   opacity: .1;
