made artwork draggable so you can design the wall yourself -- may need to resize artwork again so theres more room to move things around -- however might not because may not be really necessary or useful..

--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -50,6 +50,8 @@
 #art-img:hover{
   transform: scale(1.25);
   opacity: 1;
+  border: 5px solid white;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
 #art-img2{
   width: 100%;
@@ -62,4 +64,6 @@
 #art-img2:hover{
   transform: scale(1.15);
   opacity: 1;
+  border: 5px solid white;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
