simple change of the cursors/mouse on certain items from crosshairs and pointers -> grab cursor to imitate that the div can be 'grabbed' and moved around

--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -43,7 +43,7 @@
   width: 100%;
   height: 235px;
   transition: .55s ease-in-out;
-  cursor: pointer;
+  cursor: grab;
   opacity: .1;
 }
 
@@ -57,7 +57,7 @@
   width: 100%;
   height: 225px;
   transition: .25s ease-in-out;
-  cursor: pointer;
+  cursor: grab;
   opacity: .1;
 }
 
