--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -12,6 +12,7 @@
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 60px;
+  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
 
 .gallery-container{
