--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -13,6 +13,7 @@
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 68px;
+  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
 .carousel-container{
   background: whitesmoke !important;
