--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -16,9 +16,8 @@ canvas{
   color: black;
   letter-spacing: -0.05em;
   user-select: none;
-  text-transform: uppercase;
   font-size: 70px;
-  transition: all 0.25s ease-out;
+  transition: all 0.55s ease-in-out;
 }
 #title-letter:hover{
   color: seagreen;
