--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -1,16 +1,22 @@
-.fantasy-page-bg{
+.fantasy-page-header{
   background: white;
-  background-image: url('http://www.tavern23mn.com/wp-content/uploads/2016/04/football-bg.jpg');
-  background-size:100% 100%;
+  background-image: url('https://vcore.com/wp-content/uploads/2017/09/football.jpeg');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   height: 420px;
 }
 .ff-title{
   color: seagreen;
   text-align: left;
-  padding-top: 10%;
-  margin-left: 33%;
+  padding-top: 7%;
+  margin-left: 30%;
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
-  font-size: 80px;
-  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
+  font-size: 89px;
+
+}
+.ff-intro{
+  height: 350px;
+  background: white;
+
 }
