another small better change to title"

--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -13,7 +13,7 @@
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 89px;
-
+  text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
 }
 .ff-intro{
   height: 350px;
