--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -18,19 +18,22 @@
   text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
 }
 .ff-intro{
-  height: 320px;
+  height: 390px;
   background: white;
   clip-path: polygon(50% 2%, 100% 21%, 100% 100%, 51% 100%, 0 100%, 0 21%);
 }
 .ff-intro-box{
   position: absolute;
   font-size: 24px;
-  width: 60%;
-  margin-left: 20%;
+  width: 62%;
+  margin-left: 19%;
   margin-top: 7%;
-  padding: 1%;
+  padding: 1.5%;
   text-align: center;
-  border: 1px solid seagreen;
-
-
+  border: 2px solid black;
+}
+.ff-nav{
+  position: absolute;
+  margin-top: 21%;
+  margin-left: 33%;
 }
