redesigned sports hub slab on main home page -- done with tacky buttons everywhere and more simplified

--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -35,5 +35,10 @@
 .ff-nav{
   position: absolute;
   margin-top: 21%;
-  margin-left: 33%;
+  margin-left: 35%;
+}
+.ff-nav-btn{
+  font-family: 'Satisfy', sans-serif;
+  color: seagreen;
+
 }
