--- a/src/components/WebDevSlab/index.css
+++ b/src/components/WebDevSlab/index.css
@@ -8,7 +8,8 @@
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 42px;
-  
+  text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
+
 }
 .skill{
   color: whitesmoke;
