--- a/src/components/SportsSlab/index.css
+++ b/src/components/SportsSlab/index.css
@@ -19,7 +19,7 @@
   position: absolute;
   margin-top: 1.18%;
   padding: 1%;
-  width: 20%;
+  width: 21%;
   display: inline-block;
   transition: .3s ease-in-out;
   text-align: center;
@@ -28,10 +28,12 @@
   cursor: pointer;
   height: 300px;
   opacity: .70;
+  clip-path: polygon(100% 0, 100% 46%, 100% 100%, 0 100%, 0 27%);
 }
 .sport-btn-title{
   font-family: 'Satisfy', sans-serif;
   font-size: 40px;
+  transition: .3s ease-in-out;
   width: 100%;
   position: absolute;
   margin-left: -48%;
@@ -69,10 +71,13 @@
   border: 1px solid seagreen;
 }
 .fantasy-sport:hover{
+  clip-path: polygon(100% 0, 100% 46%, 100% 100%, 0 100%, 0 17%);
   color: #ffbf00;
   opacity: 1;
-  border-top: 20px solid white;
   font-weight: 600;
+}
+.fantasy-sport:hover .sport-btn-title{
+  transform: rotate(-10deg);
 }
 .fantasy-sport#nbl:hover{
   background-color: red;
