titles done for fantasy football slabs

--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -54,26 +54,46 @@
   color: gold;
 }
 .ff-rankings-section{
-  height: 350px;
+  height: 600px;
   width: 100%;
   background-color: seagreen;
   overflow-x: hidden;
 }
 .ff-waivers-section{
-  height: 350px;
+  height: 600px;
   background-color: white;
   overflow-x: hidden;
   width: 100%;
 }
 .ff-trades-section{
-  height: 350px;
+  height: 600px;
   background-color: seagreen;
   overflow-x: hidden;
   width: 100%;
 }
 .ff-daily-section{
-  height: 350px;
+  height: 600px;
   background-color: white;
   overflow-x: hidden;
   width: 100%;
+}
+.ff-section-title#greenbg{
+  color: white;
+  text-align: left;
+  padding-top: 3%;
+  margin-left: 10%;
+  font-weight: bolder;
+  font-family: 'Satisfy', sans-serif;
+  font-size: 56px;
+  text-shadow: 4px 3px 0px seagreen, 9px 8px 0px rgba(0,0,0,0.25);
+}
+.ff-section-title#whitebg{
+  color: seagreen;
+  text-align: left;
+  padding-top: 3%;
+  margin-left: 10%;
+  font-weight: bolder;
+  font-family: 'Satisfy', sans-serif;
+  font-size: 56px;
+  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
