--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -13,14 +13,14 @@ body{
   color: seagreen;
   text-align: left;
   padding-top: 7%;
-  margin-left: 30%;
+  margin-left: 25%;
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
-  font-size: 89px;
+  font-size: 110px;
   text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
 }
 .ff-intro{
-  height: 390px;
+  height: 420px;
   background: white;
   clip-path: polygon(50% 2%, 100% 21%, 100% 100%, 51% 100%, 0 100%, 0 21%);
 }
@@ -67,31 +67,30 @@ body{
   height: 650px;
   width: 100%;
   background-color: seagreen;
-  clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
+  clip-path: polygon(0 0, 93% 0, 100% 100%, 7% 100%);
 }
 .ff-waivers-section{
   height: 650px;
   background-color: white;
   width: 100%;
-  clip-path: polygon(10% 0, 100% 0%, 90% 100%, 0% 100%);
+  clip-path: polygon(7% 0, 100% 0%, 93% 100%, 0% 100%);
 }
 .ff-trades-section{
   height: 650px;
   background-color: seagreen;
   width: 100%;
-  clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
+  clip-path: polygon(0 0, 93% 0, 100% 100%, 7% 100%);
 }
 .ff-daily-section{
   height: 650px;
   background-color: white;
   width: 100%;
-  clip-path: polygon(10% 0, 100% 0%, 90% 100%, 0% 100%);
+  clip-path: polygon(7% 0, 100% 0%, 93% 100%, 0% 100%);
 }
 .ff-section-title#greenbg{
   color: white;
-  text-align: left;
   padding-top: 3%;
-  margin-left: 10%;
+  text-align: center;
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 56px;
@@ -100,9 +99,9 @@ body{
 }
 .ff-section-title#whitebg{
   color: seagreen;
-  text-align: left;
+  text-align: center;
   padding-top: 3%;
-  margin-left: 15%;
+  margin-left: 10%;
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 56px;
