--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -3,25 +3,24 @@ canvas{
   width: 100%;
 }
 .title#header{
-  font-size: 76px;
+  font-size: 80px;
+  font-family: 'Satisfy', sans-serif;
   text-shadow: 0px 1px 2px seagreen;
   margin-left: -15%;
   font-weight: 900;
+  cursor: crosshair;
 }
 
 #title-letter{
   position: relative;
-  text-transform: uppercase;
-  text-shadow: -15px 5px 20px #ced0d3;
+  cursor: crosshair;
   color: black;
   letter-spacing: -0.05em;
-  user-select: none;
-  font-size: 70px;
-  transition: all 0.55s ease-in-out;
+  transition: 0.25s ease-in-out;
+  text-shadow: 4px 3px 0px #E4EAE8, 9px 8px 0px rgba(0,0,0,0.15);
 }
 #title-letter:hover{
   color: seagreen;
-  text-shadow: 0px 1px 2px black ;
 }
 
 #title-dot{
