more players added -- soon changing the layout to where each section shows one position at a time and you can select to show which position you want to view

--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -127,6 +127,7 @@ body{
   margin-top: 3%;
   overflow-y: scroll;
   padding: 1%;
+  border-radius: 2%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -139,7 +140,7 @@ body{
   margin-top: 3%;
   overflow-y: scroll;
   padding: 1%;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  border-radius: 2%;
 }
 .qb-section{
   position: absolute;
@@ -150,6 +151,7 @@ body{
   margin-top: 3%;
   overflow-y: scroll;
   padding: 1%;
+  border-radius: 2%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .te-section{
@@ -161,6 +163,7 @@ body{
   margin-top: 3%;
   overflow-y: scroll;
   padding: 1%;
+  border-radius: 2%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
