--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -220,7 +220,7 @@ body{
   background-color: seagreen;
   border-color: seagreen;
   width: 100%;
-  height: 4px;
+  height: 5px;
 }
 
 .design-lines#first{
@@ -242,4 +242,5 @@ body{
 .design-lines#third{
   margin-top: 18%;
   margin-left: 69%;
+  width: 31%;
 }
