--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -114,8 +114,25 @@ body{
 }
 
 .rb-section#whitebg, .wr-section#whitebg, .te-section#whitebg, .qb-section#whitebg{
-  background: seagreen;
-  color: white;
+  background: none;
+  color: black;
+  border-radius: 30%;
+  box-shadow: none;
+  border: 3px solid white;
+  height: 300px;
+  width: 19%;
+  margin-top: 0.5%;
+  padding: 2%;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+}
+.rb-section#whitebg2, .wr-section#whitebg2, .te-section#whitebg2, .qb-section#whitebg2{
+  background: none;
+  color: black;
+  border-radius: 10%;
+  height: 400px;
+  width: 19%;
+  margin-top: 0.5%;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
 .rb-section{
@@ -194,11 +211,13 @@ body{
   font-family: 'Satisfy', sans-serif;
 }
 .waiver-title{
-  color: gold;
+  color: seagreen;
+  font-family: 'Satisfy', sans-serif;
   text-align: center;
   margin-top: 5%;
-  font-size: 22px;
+  font-size: 36px;
   font-weight: 600;
+  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
 .trade-title{
   color: gold;
@@ -290,4 +309,46 @@ body{
   margin-top: 18%;
   margin-left: 69%;
   width: 31%;
+}
+.design-lines#waiver1{
+  transform: rotate(90deg);
+  width: 10%;
+  height: 20px;
+  margin: 30% 0 0 13%;
+  border-radius: 5%;;
+}
+.design-lines#waiver2{
+  transform: rotate(90deg);
+  width: 14%;
+  height: 20px;
+  margin: 30% 0 0 23%;
+  border-radius: 5%;;
+}
+.design-lines#waiver3{
+  transform: rotate(90deg);
+  width: 5%;
+  height: 20px;
+  margin: 31% 0 0 40%;
+  border-radius: 5%;;
+}
+.design-lines#waiver4{
+  transform: rotate(90deg);
+  width: 8%;
+  height: 20px;
+  margin: 30% 0 0 53%;
+  border-radius: 5%;;
+}
+.design-lines#waiver5{
+  transform: rotate(90deg);
+  width: 12%;
+  height: 20px;
+  margin: 30% 0 0 63%;
+  border-radius: 5%;;
+}
+.design-lines#waiver6{
+  transform: rotate(90deg);
+  width: 13%;
+  margin: 30% 0 0 78%;
+  height: 20px;
+  border-radius: 5%;;
 }
